[project]
name = "asv_bench_memray"
version = "0.0.1"
description = "A memray benchmark plugin for asv"
authors = [
    { name = "Rohit Goswami", email = "rgoswami@ieee.org" },
]
maintainers = [
    { name = "Rohit Goswami", email = "rgoswami@ieee.org" },
]
dependencies = [
    "memray>=1.7.0",
    "asv_runner>=0.1.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
Documentation = "https://github.com/HaoZeke/asv_bench_memray#readme"
Issues = "https://github.com/HaoZeke/asv_bench_memray/issues"
Source = "https://github.com/HaoZeke/asv_bench_memray"

[project.optional-dependencies]
lint = [
    "ruff>=0.0.265",
    "black>=23.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
extend-ignore = [
    "E741", # Do not use variables named 'I', 'O', or 'l'
]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade
  "I001", # isort
]

[tool.black]
line-length = 88
target-version = ['py39']
